# tui-wright

./: Cargo.toml  flake.nix
.claude/skills/tui-wright/: SKILL.md  reference.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 56j9j87bhs7a05l1xhc6n2m8ksl2yryd-source  wl5m60vn27dl0dnqrwif4jam4zy86inq-source
src/: client.rs  diff.rs  error.rs  input.rs  lib.rs  main.rs  protocol.rs  screen.rs  server.rs  session.rs  trace.rs
tests/: integration.rs
